# beta-asm

./: .gitignore  Makefile  README  TODO.org  beta-asm.cabal  clean.sh  reserve1.uasm  stack.yaml
app/: Main.hs  Serve.hs
src/: Lib.hs
src/Beta/: Decoder.hs  Err.hs  Mach.hs  Types.hs  Util.hs
src/Uasm/: Asdf.hs  Bind.hs  Eval.hs  Expand.hs  FileSet.hs  FinalPass.hs  Ins.hs  LabelPass.hs  Macro.hs  Parser.hs  Pretty.hs  SymbolTable.hs  Types.hs
test/: Spec.hs  TestAll.hs  TestBind.hs  TestEval.hs  TestExpand.hs  TestFinalPass.hs  TestFixDot.hs  TestLabelPass.hs  TestMacro.hs  TestParse.hs
test/TestBeta/: TestMach.hs
test/uasm/: arglist.uasm  beta.uasm  le1511-data-hazard.uasm  le1521.uasm  macro1.uasm  macroblock.uasm  prog1.uasm  reserve.uasm  reserve2.uasm  snippet2.uasm  test7.uasm  test8.uasm  top-level.uasm
test/uasm-r0-progs/: 42.uasm  countdown42.uasm  simple-square.uasm  sum-squares.uasm  sum-zero-ten.uasm
