name:                beta-asm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/drhodes/beta-asm#readme
license:             BSD3
license-file:        LICENSE
author:              Derek Rhodes
maintainer:          physci@gmail.com
copyright:           No.
category:            Yes.
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Uasm.Parser
                     , Uasm.Eval
                     , Uasm.Types 
                     , Uasm.Expand
                     , Uasm.Bind
                     , Uasm.SymbolTable
                     , Uasm.LabelPass
                          
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , hex >= 0.1.2
                     , mtl >= 2.2.1
                     , parsec >= 3.1.9
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck >= 0.8.4
                     , tasty-smallcheck >= 0.8.1
                     , transformers >= 0.4.2.0
                     , wl-pprint >= 1.2
  default-language:    Haskell2010

test-suite beta-asm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test  
  main-is:             TestParse.hs
  build-depends:       
                         HUnit
                       , QuickCheck
                       , base
                       , beta-asm
                       , containers >= 0.5.6.2
                       , hex >= 0.1.2
                       , mtl
                       , parallel
                       , parsec >= 3.1.9
                       , tasty
                       , tasty-golden
                       , tasty-hspec
                       , tasty-hunit
                       , tasty-program >= 1.0.3
                       , tasty-quickcheck
                       , tasty-smallcheck
                       , transformers >= 0.4.2.0
                       , wl-pprint >= 1.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- executable beta-asm-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , beta-asm
--                      , containers >= 0.5.6.2
--                      , hex >= 0.1.2
--                      , parsec >= 3.1.9
--                      , wl-pprint >= 1.2
--   default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/drhodes/beta-asm
