name:                beta-asm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/drhodes/beta-asm#readme
license:             BSD3
license-file:        LICENSE
author:              Derek Rhodes
maintainer:          physci@gmail.com
copyright:           No.
category:            Yes.
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-prof-options:    -fprof-auto
  -- ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Uasm.Parser
                     , Uasm.Types 
                     , Uasm.Expand
                     , Uasm.Pretty
                     , Uasm.SymbolTable
                     , Uasm.LabelPass
                     , Uasm.FinalPass
                     , Beta.Mach
                     , Beta.Types
                     , Beta.Decoder
                     , Beta.Util
                     , Beta.Err
                          
  build-depends:       GenericPretty >= 1.2.1
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , generic-pretty >= 0.1.0
                     , hex >= 0.1.2
                     , json >= 0.9.1
                     , mtl >= 2.2.1
                     , parsec >= 3.1.9
                     , prelude-safeenum >= 0.1.1.2
                     , syb >= 0.6
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck >= 0.8.4
                     , tasty-smallcheck >= 0.8.1
                     , text >= 1.2.2.0
                     , transformers >= 0.4.2.0
                     , wl-pprint >= 1.2
  default-language:    Haskell2010

test-suite beta-asm-test
  ghc-prof-options:    -fprof-auto
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test  
  main-is:             TestAll.hs
  build-depends:       
                                 HUnit
                       , GenericPretty >= 1.2.1
                       , QuickCheck
                       , base
                       , beta-asm
                       , containers >= 0.5.6.2
                       , generic-pretty >= 0.1.0
                       , hex >= 0.1.2
                       , json >= 0.9.1
                       , mtl
                       , parallel
                       , parsec >= 3.1.9
                       , prelude-safeenum >= 0.1.1.2
                       , syb >= 0.6
                       , tasty
                       , tasty-golden
                       , tasty-hspec
                       , tasty-hunit
                       , tasty-program >= 1.0.3
                       , tasty-quickcheck
                       , tasty-smallcheck
                       , text >= 1.2.2.0
                       , transformers >= 0.4.2.0
                       , wl-pprint >= 1.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable beta-asm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , beta-asm
                     , containers >= 0.5.6.2
                     , hex >= 0.1.2
                     , json >= 0.9.1
                     , mtl
                     , parsec >= 3.1.9
                     , prelude-safeenum >= 0.1.1.2
                     , scotty
                     , syb >= 0.6
                     , text >= 1.2.2.0
                     , transformers
                     , wl-pprint >= 1.2
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/drhodes/beta-asm
